2016/12/29
	The NoCombat(func, ...) also would call the func in a thread now.
	Fix the ScorpioManager's ADDON_LOADED

2016/12/28
	Fix the weak table cause thread task be collected.

2016/12/27
	Re-design the localization system.

2016/12/22
	Init the alpha version, no-ui part finished.