@@ -1,7 +1,7 @@
 ## Interface: 70000
 ## Title: [Lib] Scorpio
 ## Author: kurapica125@outlook.com
-## Version: v005
+## Version: v006
 ## Notes: Scorpio Addon FrameWork
 ## URL: http://github.com/kurapica/Scorpio
 ## Dependencies: PLoop
